--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,25 @@ ol, ul {
   font-size: 50px;
 }
 
+.collapseChoice {
+  width: 50px;
+  height: 50px;
+  border: 5px;
+  border-color: black;
+  text-align: center;
+  padding-top: 20px;
+  cursor: default;
+}
+
+.xScore{
+  margin: 10px;
+  float: left;
+}
+.yScore{
+  margin-top: 10px;
+  float: right;
+}
+
 .square:focus {
   outline: none;
 }
