improved status messages on game end

--- a/src/index.css
+++ b/src/index.css
@@ -51,11 +51,13 @@ ol, ul {
 }
 
 .xScore{
-  margin: 10px;
+  margin-top: 10px;
+  font-size: 20px;
   float: left;
 }
 .yScore{
   margin-top: 10px;
+  font-size: 20px;
   float: right;
 }
 
