--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,22 +1,24 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background-color: #374046;
+  color: #e0e0e0;
 }
 
 ol, ul {
   padding-left: 30px;
 }
 
-.black{
-  color: black;
+.white{
+  color: #e0e0e0;
 }
 
 .blue{
-  color: #3498db;
+  color: #00BBD3;
 }
 
 .red{
-  color: red;
+  color: #e74c3c;
 }
 
 
@@ -37,8 +39,8 @@ ol, ul {
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: #374046;
+  border: 2px solid #999;
   float: left;
   font-size: 24px;
   font-weight: bold;
@@ -47,6 +49,7 @@ ol, ul {
   width: 160px;
   margin-right: -1px;
   margin-top: -1px;
+  border-color: #00BBD3;
 }
 
 .classical{
@@ -66,14 +69,19 @@ ol, ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   width: 50px;
   height: 50px;
-  border: 5px;
-  border-color: black;
+  border: 2px;
+  border-color: #e74c3c;
   text-align: center;
   cursor: default;
   border-style: solid;
+  margin: 5px;
+}
+
+.collapseChoice:hover{
+  background-color: #e74c3c;
 }
 
 .xScore{
