--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,9 +1,14 @@
 html, body {
   width: 100%;
-  height: 100%;
+  height: 95%;
   font: 14px "Century Gothic", Futura, sans-serif;
   background-color: #374046;
   color: #e0e0e0;
+  overflow-y: hidden;
+}
+
+h1 {
+  color: white;
 }
 
 #root {
@@ -11,13 +16,40 @@ html, body {
   height: 100%;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+#container canvas, .overlay {
+  position: absolute;
+}
+
+.overlay {
+  left: 50%;
+  top: 50%;
+}
+
+.withinOverlay {
+  position: relative;
+  left: -50%;
+  margin-top: -25%;
+}
+
+.border {
+  width: 400px;
+  padding: 30px;
+  position: relative;
+  padding-bottom: 50px;
+  border: solid 5px white;
+}
+
+.border:before {
+  background: none;
+  border: 5px solid white;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: -20px;
+  bottom: -20px;
+  pointer-events: none;
 }
 
 ol, ul {
