--- a/src/style/app.css
+++ b/src/style/app.css
@@ -22,6 +22,25 @@ h1 {
   position: absolute;
 }
 
+.button {
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  width: 80px;
+  border: 3px dashed white;
+  background-color: Transparent;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  margin: 20px 20px 0px 20px;
+  vertical-align: center;
+}
+
+.button:hover {
+  border-color: #e74c3c;
+  color: #e74c3c;
+}
+
 .overlay {
   left: 50%;
   top: 50%;
